--- a/css/main.css
+++ b/css/main.css
@@ -35,7 +35,7 @@ body {
     background: white;
     font-family: 'Helvetica Neue', 'Helvetica','Cantarell', arial, sans-serif;
     line-height: 125%;
-    width: 100%
+    width: 100%;
     float: center;
     color: #666;
     margin: 0;
